--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -62,6 +62,83 @@
   }
 }
 
+.card-bdd {
+  position: relative;
+  width: 250px;
+  height: 150px;
+  border-radius: 20px;
+  > .front,
+  > .back {
+    display: block;
+    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition-duration: 1s, 0.5s;
+    transition-property: transform, opacity;
+    height: inherit;
+    padding: 0 10px;
+    border-radius: inherit;
+    border: 2px solid $blue-dark;
+    background-color: $gray-light;
+  }
+  > .front {
+    transform: rotateY(0deg);
+  }
+  > .back {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transform: rotateY(-180deg);
+    > .card-bdd-container {
+      padding-top: 20px;
+      align-items: flex-start;
+    }
+  }
+  .card-bdd-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100%;
+    position: relative;
+    .card-db-action {
+      display: flex;
+      justify-content: flex-end;
+      position: absolute;
+      top: 5px;
+      right: 5px;
+    }
+    .line {
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      > i {
+        margin-right: 10px;
+      }
+    }
+    .mail {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      width: 100%;
+      > i {
+        margin-right: 10px;
+      }
+    }
+  }
+  &:hover {
+    > .front {
+      transform: rotateY(180deg);
+    }
+    > .back {
+      opacity: 1;
+      transform: rotateY(0deg);
+    }
+  }
+}
+
 .card-info {
   box-shadow: 2px 3px 10px 2px $blue-dark-shadow;
   padding: 8px;
@@ -169,14 +246,6 @@
       }
     }
 
-    .card-db-action {
-      display: flex;
-      justify-content: flex-end;
-      position: absolute;
-      top: 5px;
-      right: 5px;
-    }
-
     #spacer {
       width: 20px;
       height: 25px;
@@ -216,11 +285,6 @@
         color: black;
         text-decoration: none;
       }
-    }
-    .card-db-action {
-      display: flex;
-      justify-content: flex-end;
-      flex-grow: 1;
     }
 
     .db-element {
