--- a/app/views/anti_poisons/_elements.html.erb
+++ b/app/views/anti_poisons/_elements.html.erb
@@ -1,19 +1,21 @@
 <% @anti_poisons_page.each do |anti_poison| %>
-  <div class="card-database">
-    <div class="db-element col-30">
-      <%= anti_poison.name %>
+  <div class="card-bdd">
+    <div class="front">
+      <div class="card-bdd-container">
+        <div class="text-center"><%= anti_poison.name %></div>
+      </div>
     </div>
-    <div class="db-element col-40">
-      <%= anti_poison.address %>
-    </div>
-    <div class="db-element col-20">
-      <%= anti_poison.phone %>
-    </div>
-    <div class="card-db-action">
-      <%= link_to edit_anti_poison_path(anti_poison), class: "card-db-edit", target: '_blank' do %>
-        <i class='fas fa-pencil-alt'></i>
-      <% end %>
-      <%= link_to "x", destroy_anti_poison_path(anti_poison), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="back">
+      <div class="card-bdd-container">
+        <div class="line"><i class="fas fa-map-marker-alt"></i><%= anti_poison.address %></div>
+        <div class="line"><i class="fas fa-phone-alt"></i><%= anti_poison.phone %></div>
+        <div class="card-db-action">
+          <%= link_to edit_anti_poison_path(anti_poison), class: "card-db-edit", target: '_blank' do %>
+            <i class='fas fa-pencil-alt'></i>
+          <% end %>
+          <%= link_to "x", destroy_anti_poison_path(anti_poison), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
