--- a/app/views/moas/_elements.html.erb
+++ b/app/views/moas/_elements.html.erb
@@ -1,26 +1,23 @@
 <% @moas_page.each do |moa| %>
-  <div class="card-database">
-    <div id="spacer"></div>
-    <div class="db-element col-15">
-      <%= moa.name %>
+  <div class="card-bdd">
+    <div class="front">
+      <div class="card-bdd-container">
+        <div class="text-center"><%= moa.name %></div>
+        <div class="line"><i class="fas fa-user"></i><%= moa.representative %></div>
+      </div>
     </div>
-    <div class="db-element col-35">
-      <%= moa.address %>
-    </div>
-    <div class="db-element col-15">
-      <%= moa.representative %>
-    </div>
-    <div class="db-element col-15">
-      <%= moa.phone %>
-    </div>
-    <div class="db-element word-break col-20">
-      <%= moa.email %>
-    </div>
-    <div class="card-db-action">
-      <%= link_to edit_moa_path(moa), class: "card-db-edit" do %>
-        <i class='fas fa-pencil-alt'></i>
-      <% end %>
-      <%= link_to "x", destroy_moa_path(moa), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="back">
+      <div class="card-bdd-container">
+        <div class="line"><i class="fas fa-map-marker-alt"></i><%= moa.address %></div>
+        <div class="line"><i class="fas fa-phone-alt"></i><%= moa.phone %></div>
+        <div class="mail"><i class="fas fa-envelope"></i><%= moa.email %></div>
+        <div class="card-db-action">
+          <%= link_to edit_moa_path(moa), class: "card-db-edit" do %>
+            <i class='fas fa-pencil-alt'></i>
+          <% end %>
+          <%= link_to "x", destroy_moa_path(moa), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
