--- a/app/views/moes/_elements.html.erb
+++ b/app/views/moes/_elements.html.erb
@@ -1,26 +1,24 @@
 <% @moes_page.each do |moe| %>
-  <div class="card-database">
-    <div id="spacer"></div>
-    <div class="db-element col-15">
-      <%= moe.name %>
+  <div class="card-bdd">
+    <div class="front">
+      <div class="card-bdd-container">
+        <div class="text-center"><%= moe.name %></div>
+        <div class="line"><i class="fas fa-user"></i><%= moe.representative %></div>
+      </div>
     </div>
-    <div class="db-element col-35">
-      <%= moe.address %>
-    </div>
-    <div class="db-element col-15">
-      <%= moe.representative %>
-    </div>
-    <div class="db-element col-15">
-      <%= moe.phone %>
-    </div>
-    <div class="db-element word-break col-20">
-      <%= moe.email %>
-    </div>
-    <div class="card-db-action">
-      <%= link_to edit_mo_path(moe), class: "card-db-edit" do %>
-        <i class='fas fa-pencil-alt'></i>
-      <% end %>
-      <%= link_to "x", destroy_mo_path(moe), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="back">
+      <div class="card-bdd-container">
+        <div class="line"><i class="fas fa-map-marker-alt"></i><%= moe.address %></div>
+        <div class="line"><i class="fas fa-phone-alt"></i><%= moe.phone %></div>
+        <div class="mail"><i class="fas fa-envelope"></i><%= moe.email %></div>
+        <div class="card-db-action">
+          <%= link_to edit_mo_path(moe), class: "card-db-edit" do %>
+            <i class='fas fa-pencil-alt'></i>
+          <% end %>
+          <%= link_to "x", destroy_mo_path(moe), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+        </div>
+      </div>
     </div>
   </div>
+
 <% end %>
