--- a/app/views/pension_insurances/_elements.html.erb
+++ b/app/views/pension_insurances/_elements.html.erb
@@ -1,20 +1,21 @@
 <% @pension_insurances_page.each do |pension_insurance| %>
-  <div class="card-database">
-    <div id="spacer"></div>
-    <div class="db-element col-30">
-      <%= pension_insurance.address %>
+  <div class="card-bdd">
+    <div class="front">
+      <div class="card-bdd-container">
+        <div class="text-center"><%= pension_insurance.fax %></div>
+      </div>
     </div>
-    <div class="db-element col-30">
-      <%= pension_insurance.phone %>
-    </div>
-    <div class="db-element col-30">
-      <%= pension_insurance.fax %>
-    </div>
-    <div class="card-db-action">
-      <%= link_to edit_pension_insurance_path(pension_insurance), class: "card-db-edit" do %>
-        <i class='fas fa-pencil-alt'></i>
-      <% end %>
-      <%= link_to "x", destroy_pension_insurance_path(pension_insurance), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="back">
+      <div class="card-bdd-container">
+        <div class="line"><i class="fas fa-map-marker-alt"></i><%= pension_insurance.address %></div>
+        <div class="line"><i class="fas fa-phone-alt"></i><%= pension_insurance.phone %></div>
+        <div class="card-db-action">
+          <%= link_to edit_pension_insurance_path(pension_insurance), class: "card-db-edit", target: '_blank' do %>
+            <i class='fas fa-pencil-alt'></i>
+          <% end %>
+          <%= link_to "x", destroy_pension_insurance_path(pension_insurance), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
