--- a/app/views/regional_committees/_elements.html.erb
+++ b/app/views/regional_committees/_elements.html.erb
@@ -1,23 +1,22 @@
 <% @regional_committees_page.each do |regional_committee| %>
-  <div class="card-database">
-    <div id="spacer"></div>
-    <div class="db-element col-24">
-      <%= regional_committee.name %>
+  <div class="card-bdd">
+    <div class="front">
+      <div class="card-bdd-container">
+        <div class="text-center"><%= regional_committee.name %></div>
+      </div>
     </div>
-    <div class="db-element col-24">
-      <%= regional_committee.address %>
-    </div>
-    <div class="db-element col-24">
-      <%= regional_committee.phone %>
-    </div>
-    <div class="db-element col-22">
-    <%= regional_committee.fax %>
-    </div>
-    <div class="card-db-action">
-      <%= link_to edit_regional_committee_path(regional_committee), class: "card-db-edit" do %>
-        <i class='fas fa-pencil-alt'></i>
-      <% end %>
-      <%= link_to "x", destroy_regional_committee_path(regional_committee), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="back">
+      <div class="card-bdd-container">
+        <div class="line"><i class="fas fa-map-marker-alt"></i><%= regional_committee.address %></div>
+        <div class="line"><i class="fas fa-phone-alt"></i><%= regional_committee.phone %></div>
+        <div class="line"><i class="fas fa-fax"></i><%= regional_committee.fax %></div>
+        <div class="card-db-action">
+          <%= link_to edit_regional_committee_path(regional_committee), class: "card-db-edit", target: '_blank' do %>
+            <i class='fas fa-pencil-alt'></i>
+          <% end %>
+          <%= link_to "x", destroy_regional_committee_path(regional_committee), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
