--- a/app/views/sos_hands/_elements.html.erb
+++ b/app/views/sos_hands/_elements.html.erb
@@ -1,20 +1,21 @@
 <% @sos_hands_page.each do |sos_hand| %>
-  <div class="card-database">
-    <div id="spacer"></div>
-    <div class="db-element col-30">
-      <%= sos_hand.name %>
+  <div class="card-bdd">
+    <div class="front">
+      <div class="card-bdd-container">
+        <div class="text-center"><%= sos_hand.name %></div>
+      </div>
     </div>
-    <div class="db-element col-40">
-      <%= sos_hand.address %>
-    </div>
-    <div class="db-element col-20">
-    <%= sos_hand.phone %>
-    </div>
-    <div class="card-db-action">
-      <%= link_to edit_sos_hand_path(sos_hand), class: "card-db-edit" do %>
-        <i class='fas fa-pencil-alt'></i>
-      <% end %>
-      <%= link_to "x", destroy_sos_hand_path(sos_hand), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="back">
+      <div class="card-bdd-container">
+        <div class="line"><i class="fas fa-map-marker-alt"></i><%= sos_hand.address %></div>
+        <div class="line"><i class="fas fa-phone-alt"></i><%= sos_hand.phone %></div>
+        <div class="card-db-action">
+          <%= link_to edit_sos_hand_path(sos_hand), class: "card-db-edit", target: '_blank' do %>
+            <i class='fas fa-pencil-alt'></i>
+          <% end %>
+          <%= link_to "x", destroy_sos_hand_path(sos_hand), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
