--- a/app/views/work_medecines/_elements.html.erb
+++ b/app/views/work_medecines/_elements.html.erb
@@ -1,20 +1,21 @@
 <% @work_medecines_page.each do |work_medecine| %>
-  <div class="card-database">
-    <div id="spacer"></div>
-    <div class="db-element col-40">
-      <%= work_medecine.address %>
+  <div class="card-bdd">
+    <div class="front">
+      <div class="card-bdd-container">
+        <div class="text-center"><%= work_medecine.fax %></div>
+      </div>
     </div>
-    <div class="db-element col-20">
-      <%= work_medecine.phone %>
-    </div>
-    <div class="db-element col-30">
-      <%= work_medecine.fax %>
-    </div>
-    <div class="card-db-action">
-      <%= link_to edit_work_medecine_path(work_medecine), class: "card-db-edit" do %>
-        <i class='fas fa-pencil-alt'></i>
-      <% end %>
-      <%= link_to "x", destroy_work_medecine_path(work_medecine), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="back">
+      <div class="card-bdd-container">
+        <div class="line"><i class="fas fa-map-marker-alt"></i><%= work_medecine.address %></div>
+        <div class="line"><i class="fas fa-phone-alt"></i><%= work_medecine.phone %></div>
+        <div class="card-db-action">
+          <%= link_to edit_work_medecine_path(work_medecine), class: "card-db-edit", target: '_blank' do %>
+            <i class='fas fa-pencil-alt'></i>
+          <% end %>
+          <%= link_to "x", destroy_work_medecine_path(work_medecine), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
