--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,3 +1,9 @@
+@media (min-width: 1300px) {
+  .container-app {
+    min-width: 1290px;
+  }
+}
+
 .container-ppsp {
   display: flex;
   flex-wrap: wrap;
@@ -32,7 +38,7 @@
   height: fit-content;
 }
 
-@media(min-width: 1020px) {
+@media(min-width: 991px) {
   .container-infos-supp {
     flex-wrap: wrap;
 
@@ -42,17 +48,7 @@
   }
 }
 
-@media(min-width: 1200px) {
-  .container-infos-supp {
-    flex-wrap: wrap;
-    
-    .container-info {
-      width: 300px;
-    }
-  }
-}
-
-@media(max-width: 1019px) {
+@media(max-width: 991px) {
   .container-infos-supp {
     flex-direction: column;
   
