--- a/app/views/contact/mailer/_form.html.erb
+++ b/app/views/contact/mailer/_form.html.erb
@@ -12,6 +12,6 @@
     <textarea class="form-control" required="true" rows="3" id="description" name="description" placeholder="Faciliter la rédaction de PPSPS au sein de mon entreprise de BTP" ></textarea>
   </div>
   <div class="d-flex justify-content-end">
-    <button type="submit" class="btn-orange">Envoyer mail</button>
+    <button type="submit" id="btn-send-mail" class="btn-orange">Envoyer mail</button>
   </div>
 </form>
