Add test for adding db (live with ajax)

--- a/app/views/anti_poisons/create.js.erb
+++ b/app/views/anti_poisons/create.js.erb
@@ -5,8 +5,8 @@ $(document).ready(function() {
   if (document.querySelector(".ppsp_anti_poison_id")) {
     document.querySelector(".ppsp_anti_poison_id").innerHTML = "<%= j(render 'form_field_anti_poison') %>";
   }
-  if (document.querySelector(".flexbox-database")) {
-    document.querySelector(".flexbox-database").innerHTML = "<%= j(render 'content-db') %>";
+  if (document.querySelector(".content-db")) {
+    document.querySelector(".content-db").innerHTML = "<%= j(render 'content-db') %>";
   }
 })
 
