--- a/app/views/hospitals/_form.html.erb
+++ b/app/views/hospitals/_form.html.erb
@@ -3,8 +3,8 @@
   <%= f.input :address, label: 'Adresse' %>
   <%= f.input :phone, label: 'Téléphone' %>
   <% if params[:action] == 'new' || params[:action] == 'index' %>
-    <%= f.submit 'Créer un hôpital', class: 'btn-blue' %>
+    <%= f.submit 'Créer un hôpital', class: 'btn-blue', id: "HospitalBtn" %>
   <% else %>
-    <%= f.submit 'Modifier cet hôpital', class: 'btn-blue' %>
+    <%= f.submit 'Modifier cet hôpital', class: 'btn-blue', id: "HospitalBtn" %>
   <% end %>
 <% end %>
