--- a/app/views/moes/_form.html.erb
+++ b/app/views/moes/_form.html.erb
@@ -5,8 +5,8 @@
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :email, label: 'Email' %>
   <% if params[:action] == 'new' || params[:action] == 'index' %>
-    <%= f.submit 'Créer un MOE', class: 'btn-blue' %>
+    <%= f.submit 'Créer un MOE', class: 'btn-blue', id: "MoeBtn" %>
   <% else %>
-    <%= f.submit 'Modifier ce MOE', class: 'btn-blue' %>
+    <%= f.submit 'Modifier ce MOE', class: 'btn-blue', id: "MoeBtn" %>
   <% end %>
 <% end %>
