--- a/app/views/pension_insurances/_form.html.erb
+++ b/app/views/pension_insurances/_form.html.erb
@@ -3,8 +3,8 @@
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :fax, label: 'Fax' %>
   <% if params[:action] == 'new' || params[:action] == 'index' %>
-    <%= f.submit "Créer un caisse d'assurance retraite", class: 'btn-blue' %>
+    <%= f.submit "Créer un caisse d'assurance retraite", class: 'btn-blue', id: "PensionBtn" %>
   <% else %>
-    <%= f.submit "Modifier cette caisse d'assurance retraite", class: 'btn-blue' %>
+    <%= f.submit "Modifier cette caisse d'assurance retraite", class: 'btn-blue', id: "PensionBtn" %>
   <% end %>
 <% end %>
