--- a/app/views/pension_insurances/create.js.erb
+++ b/app/views/pension_insurances/create.js.erb
@@ -5,8 +5,8 @@ $(document).ready(function() {
   if (document.getElementById("ppsp_pension_insurance_id")) {
     document.getElementById("ppsp_pension_insurance_id").innerHTML = "<%= j(render 'form_field_pension_insurance') %>";
   }
-  if (document.querySelector(".flexbox-database")) {
-    document.querySelector(".flexbox-database").innerHTML = "<%= j(render 'content-db') %>";
+  if (document.querySelector(".content-db")) {
+    document.querySelector(".content-db").innerHTML = "<%= j(render 'content-db') %>";
   }
 })
 
