--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
         Création de PPSP au format PDF en toute simplicité
       </div>
       <div class="container-media">
-        <%= image_tag('home_PDF.png', width: '75%', height: '100%') %>
+        <%= image_tag('home_PDF.png', class: 'home-media') %>
       </div>
     </div>
     <div class="home-card">
@@ -22,7 +22,7 @@
         Stockage centralisé de tous vos documents
       </div>
       <div class="container-media">
-        <%= video_tag('video-ppsps.mp4', width: '100%', height: '100%' ,autoplay: true, loop: true, muted: 'muted') %>
+        <%= video_tag('video-ppsps.mp4', class: 'home-media', autoplay: true, loop: true, muted: 'muted') %>
       </div>
     </div>
     <div class="home-card">
@@ -30,7 +30,7 @@
         Bases de données modifiables selon vos besoin
       </div>
       <div class="container-media">
-        <%= image_tag('logo-ppsp.png',  width: '100%', height: '100%') %>
+        <%= video_tag('video-database.mp4', class: 'home-media', autoplay: true, loop: true, muted: 'muted') %>
       </div>
     </div>
   </div>
