--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,3 +1,11 @@
 .form-altitude-other {
   width: 90%;
 }
+
+.form-title {
+  font-size: 26px;
+  font-weight: 500;
+  text-align: center;
+  margin-top: 2em;
+  margin-bottom: 1em;
+}
