--- a/app/views/work_medecines/index.html.erb
+++ b/app/views/work_medecines/index.html.erb
@@ -21,7 +21,8 @@
       <%= f.submit 'Go', class: "btn-orange-right", id: "btn-search" %>
     <% end %>
     <form class="d-flex justify-content-center mt-1" method="get" action=<%= work_medecines_path %> data-remote="true">
-      <input class="btn-orange-ext" id="btn-database" type="submit" value="Database complète">
+      <input type="hidden" name='query' value=''>
+      <button class="btn-orange-ext" id="btn-database" type="submit">Database complète</button>
     </form>
     <div class="content-db">
       <div class="flex-database">
