--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -59,7 +59,7 @@
       <div class="col-12 form-title">
         Renseignements Administratifs
       </div>
-      <div class="col-6">
+      <div class="col-md-6">
         <div class="form-group select required ppsp_moa_id">
           <div class="container-header-form">
             <label class="select required" for="ppsp_moa_id">MOA <abbr title="required">*</abbr></label>
@@ -72,7 +72,7 @@
           <%= f.input :moa_id, as: :select, label: false, collection: @moas, label_method: lambda {|x| "#{x.name} - #{x.representative}"}, input_html: {class: "select-2"} %>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-md-6">
         <div class="form-group select required ppsp_moe_id">
           <div class="container-header-form">
             <label class="select required" for="ppsp_moe_id">MOE <abbr title="required">*</abbr></label>
