Creation controller Database generique

--- a/app/views/anti_poisons/_elements.html.erb
+++ b/app/views/anti_poisons/_elements.html.erb
@@ -1,4 +1,4 @@
-<% @anti_poisons_page.each do |anti_poison| %>
+<% @database.each do |anti_poison| %>
   <div class="card-bdd">
     <div class="front">
       <div class="card-bdd-container">
