--- a/app/views/hospitals/_form_field_hospital.html.erb
+++ b/app/views/hospitals/_form_field_hospital.html.erb
@@ -9,7 +9,7 @@
   </div>
   <select class="form-control select required" name="ppsp[hospital_id]" id="ppsp_hospital_id">
     <option value=""></option>
-    <% @hospitals.each do |hospital| %>
+    <% @database.each do |hospital| %>
       <%= "<option value=#{hospital.id}>#{hospital.name}</option>".html_safe %>
     <% end %>
   </select>
