--- a/app/views/hospitals/_elements.html.erb
+++ b/app/views/hospitals/_elements.html.erb
@@ -1,4 +1,4 @@
-<% @hospitals_page.each do |hospital| %>
+<% @database_page.each do |hospital| %>
   <div class="card-bdd">
     <div class="front">
       <div class="card-bdd-container">
