Correct Ppsp form

--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -244,7 +244,7 @@
           <%= f.input :hospital_id, as: :select, collection: @hospitals, label: false, label_method: lambda { |x| "#{x.name}"}, input_html: {class: "select-2"} %>
         </div>
       </div>
-      <div class="col-6 col-md-4">
+      <div class="col-md-6 offset-md-3">
         <div class="form-group select required ppsp_security_coordinator_id">
           <div class="container-header-form">
             <label class="select required" for="ppsp_security_coordinator_id">Coordinateur sécurité</label>
